remove https and things work

--- a/in-video-events.html
+++ b/in-video-events.html
@@ -35,7 +35,7 @@
   <div class="large-9 medium-9 columns">
     <div data-live="true" data-ratio="0.5625" class="flowplayer fixed-controls">
       <video data-title="Live stream">
-        <source type="application/x-mpegurl" src="https://d3rjjofeplqma4.cloudfront.net/encoded/playlist.m3u8">
+        <source type="application/x-mpegurl" src="http://d3rjjofeplqma4.cloudfront.net/encoded/playlist.m3u8">
       </video>
     </div>
   </div>
